# VisionX-SLAM

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  build.sh  build_mac.sh  install_third_party.sh  readme.md  vcpkg.json
apps/: CMakeLists.txt  main.cpp  mono_demo.cpp  test_pangolin.cpp  test_sophus.cpp  test_viewer.cpp
config/: default.cfg
core/: CMakeLists.txt
core/backend/: local_ba.cpp  local_ba.h
core/camera/: camera.cpp  camera.h
core/common/: dataset.h  dataset_tum_rgbd.cpp  dataset_tum_rgbd.h  logger.cpp  logger.h  projection.h
core/feature/: feature_extractor.h  feature_matcher.h  orb_extractor.cpp  orb_extractor.h  orb_matcher.cpp  orb_matcher.h
core/frame/: frame.cpp  frame.h
core/frontend/: tracking.cpp  tracking.h
core/map/: landmark.h  map.cpp  map.h
core/system/: system.cpp  system.h
core/viewer/: viewer.cpp  viewer.h
