cmake_minimum_required(VERSION 3.10)
project(VisionX_SLAM LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if (MSVC)
    add_compile_options(/W4)
else()
    add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(Eigen3 CONFIG REQUIRED)
find_package(Sophus CONFIG REQUIRED)
find_package(OpenCV REQUIRED)
find_package(glog CONFIG REQUIRED)
find_package(gflags CONFIG REQUIRED)
find_package(fmt CONFIG REQUIRED)
find_package(Pangolin CONFIG REQUIRED)
find_package(GTest CONFIG REQUIRED)
message(STATUS "Pangolin Found: ${Pangolin_FOUND}")
message(STATUS "Pangolin Libraries: ${Pangolin_LIBRARIES}")

add_subdirectory(core)
add_subdirectory(apps)
