cmake_minimum_required(VERSION 3.10)
project(VisionX_SLAM LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(BUILD_SHARED_LIBS ON)

set(Pangolin_DIR "${CMAKE_SOURCE_DIR}/third_party/installed/lib/cmake/Pangolin")

if (MSVC)
    add_compile_options(/W4)
else()
    add_compile_options(-Wall -Wextra -Wpedantic)
endif()

if(APPLE)
    add_definitions(-DPANGOLIN_USING_APPLE_GL)
endif()

# find_package(OpenGL REQUIRED)
find_package(Eigen3 CONFIG REQUIRED)
find_package(Sophus CONFIG REQUIRED)
find_package(OpenCV REQUIRED)
find_package(glog CONFIG REQUIRED)
find_package(gflags CONFIG REQUIRED)
find_package(fmt CONFIG REQUIRED)
find_package(GTest CONFIG REQUIRED)
find_package(Pangolin REQUIRED)

message(STATUS "OpenCV Found: ${OpenCV_FOUND}")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
# message(STATUS "opengl found: ${OPENGL_FOUND}")
# message(STATUS "    OPENGL_INCLUDE_DIR: ${OPENGL_INCLUDE_DIR}")
# message(STATUS "    OPENGL_LIBRARIES: ${OPENGL_LIBRARIES}")
message(STATUS "pangolin found: ${Pangolin_FOUND}")
message(STATUS "    Pangolin_INCLUDE_DIRS: ${Pangolin_INCLUDE_DIRS}")
message(STATUS "    Pangolin_LIBRARIES: ${Pangolin_LIBRARIES}")

# include_directories(${OPENGL_INCLUDE_DIR})
include_directories(/opt/homebrew/opt/glew/include)
include_directories(core)

add_subdirectory(core)
add_subdirectory(apps)
